--- a/BlazorWebAssembly/_Imports.razor
+++ b/BlazorWebAssembly/_Imports.razor
@@ -7,4 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorWebAssembly
-@using BlazorWebAssembly.Shared
+@using BlazorWebAssembly.View.Shared
+@using BlazorWebAssembly.ViewModels.Adstract
+@using BlazorWebAssembly.ViewModels
