--- a/BlazorWebAssembly/View/Pages/Index.razor
+++ b/BlazorWebAssembly/View/Pages/Index.razor
@@ -1,9 +1,12 @@
 ﻿@page "/"
+@inject IIndexViewModels vm
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Привет мир!</h1>
 
-Welcome to your new app.
+Добропожаловать в моё новое приложение
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<input type="text" @bind=@vm.Title @bind:event=oninput />
+
+<SurveyPrompt Title=@vm.Title />
