--- a/BlazorWebAssembly/View/Shared/NavMenu.razor
+++ b/BlazorWebAssembly/View/Shared/NavMenu.razor
@@ -11,12 +11,17 @@
 	<nav class="flex-column">
 		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-				<span class="oi oi-home" aria-hidden="true"></span> Home
+				<span class="oi oi-home spanNavMenuItem" aria-hidden="true"></span> Home
 			</NavLink>
 		</div>
 		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="counter">
-				<span class="oi oi-plus" aria-hidden="true"></span> Counter
+				<span class="oi oi-plus spanNavMenuItem" aria-hidden="true"></span> Counter
+			</NavLink>
+		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="uml">
+				<span class="oi bi-diagram-3 spanNavMenuItem" aria-hidden="true"></span> Uml
 			</NavLink>
 		</div>
 	</nav>
