--- a/BlazorWebAssembly/wwwroot/css/app.css
+++ b/BlazorWebAssembly/wwwroot/css/app.css
@@ -12,6 +12,10 @@ a, .btn-link {
     color: #0077cc;
 }
 
+span,.spanNavMenuItem{
+    height : 32px,  
+}
+
 .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
